@@ -28,8 +28,7 @@ unset($standard_fields['id'],
       $standard_fields['is_gateway'],
       $standard_fields['PTR'],
       $standard_fields['PTRignore'],
-      $standard_fields['state'],
-      $standard_fields['firewallAddressObject']
+      $standard_fields['state']
       );
 ?>
 
