@@ -8,6 +8,24 @@ $('body').tooltip({ selector: '[rel=tooltip]' });
  * Print sorted IP addresses
  ***********************************************************************/
 
+/**
+ * Unset a value from an array if it exists
+ *
+ * @param   array  $array
+ * @param   mixed  $value
+ *
+ * @return  void
+ */
+function unset_array_value(&$array, $value) {
+	if (!is_array($array))
+		return;
+
+	$index = array_search($value, $array);
+	if ($index === false)
+		return;
+
+	unset($array[$index]);
+}
 
 # direct call, set default direction for sorting
 if(!isset($_POST['direction'])) {
@@ -37,12 +55,12 @@ $hidden_cfields = is_array($hidden_cfields['ipaddresses']) ? $hidden_cfields['ip
 
 # set selected address fields array
 $selected_ip_fields = $Tools->explode_filtered(";", $User->settings->IPfilter);  																	//format to array
-// if fw not set remove!
-if($User->settings->enableFirewallZones != 1) { unset($selected_ip_fields['firewallAddressObject']); }
-// set size
-$selected_ip_fields_size = in_array('state', $selected_ip_fields) ? sizeof($selected_ip_fields)-1 : sizeof($selected_ip_fields);	//set size of selected fields
-if($selected_ip_fields_size==1 && strlen($selected_ip_fields[0])==0) { $selected_ip_fields_size = 0; }								//fix for 0
-
+// Remove state
+unset_array_value($selected_ip_fields, 'state');
+// if modules not enabled - remove
+if($User->settings->enableFirewallZones != 1) { unset_array_value($selected_ip_fields, 'firewallAddressObject'); }
+if($User->settings->enableLocations != 1)     { unset_array_value($selected_ip_fields, 'location'); }
+if($User->settings->enableCustomers != 1)     { unset_array_value($selected_ip_fields, 'customer_id'); }
 
 /* Addresses and fields manupulations */
 
@@ -57,24 +75,20 @@ foreach($Addresses->address_types as $t) {
 		}
 	}
 }
-
 # remove port, owner, device, note, mac etc if none is set to preserve space
-$cnt_obj = ["port"=>0, "switch"=>0, "owner"=>0, "note"=>0, "mac"=>0, "customer_id"=>0];
+$cnt_obj = ["port"=>0, "switch"=>0, "owner"=>0, "note"=>0, "mac"=>0, "customer_id"=>0, "location"=>0, "firewallAddressObject"=>0];
 foreach ($addresses as $a) {
-	if (strlen($a->port)>0)	{ $cnt_obj["port"]++; }
-	if ($a->switch>0)		{ $cnt_obj["switch"]++; }
-	if(strlen($a->owner)>0)	{ $cnt_obj["owner"]++; }
-	if(strlen($a->note)>0)	{ $cnt_obj["note"]++; }
-	if(strlen($a->mac)>0)	{ $cnt_obj["mac"]++; }
-	if($a->customer_id>0)	{ $cnt_obj["customer_id"]++; }
-	if(strlen($a->location)>0) { $cnt_obj["location"]++; }		//not sure about this, because location is INT in Database
+	foreach($cnt_obj as $field => $c) {
+		// Remove field from $cnt_obj if we find a match
+		if (strlen($a->{$field})>0) { unset($cnt_obj[$field]); }
+	}
 }
+// remove empty fields in $cnt_obj
+foreach ($cnt_obj as $field=>$c)
+	unset_array_value($selected_ip_fields, $field);
 
-// check and remove empty
-foreach ($cnt_obj as $field=>$c) {
-	if ($c==0 && in_array($field, $selected_ip_fields))	{ unset($selected_ip_fields[array_search($field, $selected_ip_fields)]);  }
-}
 $selected_ip_fields = array_values($selected_ip_fields);  //Clean up array index
+
 # remove custom fields if all are empty!
 foreach($custom_fields as $field) {
 	$sizeMyFields[$field['name']] = 0;				// default value
@@ -103,15 +117,17 @@ if(sizeof($custom_fields) > 0) {
 	}
 }
 
-# set colspan for output
-$colspan['empty']  = $selected_ip_fields_size + sizeof($custom_fields) +4;		//empty colspan
-$colspan['unused'] = $selected_ip_fields_size + sizeof($custom_fields) +3;		//unused colspan
-$colspan['dhcp']   = sizeof($selected_ip_fields) + sizeof($custom_fields);		//dhcp colspan
-
 # set ping statuses for warning and offline
 $statuses = explode(";", $User->settings->pingStatus);
 
-
+# Set $zone
+if(in_array('firewallAddressObject', $selected_ip_fields)) {
+	# class
+	if(!is_object($Zones)) $Zones = new FirewallZones ($Database);
+	$zone = $Zones->get_zone_subnet_info($subnet['id']);
+} else {
+	$zone = false;
+}
 ?>
 
 <!-- print title and pagenum -->
@@ -134,19 +150,14 @@ else 				{ print _("IP addresses belonging to ALL nested subnets"); }
 	print "<th class='s_ipaddr'>"._('IP address')."</th>";
 	print "<th>"._('Hostname')."</th>";
 	// firewall address object - mandatory if enabled
-	if(in_array('firewallAddressObject', $selected_ip_fields)) {
-			# class
-			$Zones = new FirewallZones ($Database);
-			$zone = $Zones->get_zone_subnet_info ($subnet['id']);
-
-			if($zone) {							  print "<th>"._('FW object')."</th>"; }
+	if($zone) {
+		print "<th>"._('FW object')."</th>";
 	}
 	// description
 	print "<th>"._('Description')."</th>";
 	// mac
 	if(in_array('mac', $selected_ip_fields)) 	{
-    	$mac_title = $User->settings->enableMulticast=="1" ? "<th>MAC</th>" : "<th></th>";
-    	                                        { print "$mac_title"; }
+    	                                        { print "<th>"._('MAC')."</th>"; }
     }
 	# note, device, port, owner, location
 	if(in_array('note', $selected_ip_fields)) 	{ print "<th></th>"; }
@@ -169,9 +180,11 @@ else 				{ print _("IP addresses belonging to ALL nested subnets"); }
 
 <tbody>
 <?php
-/* Addresses content print */
-$n = 0;							//addresses index
-$m = sizeof($addresses) -1;		//last address index
+
+# set colspan for output
+$colspan['empty']  = sizeof($selected_ip_fields) + sizeof($custom_fields) + 4;	//empty colspan
+$colspan['unused'] = sizeof($selected_ip_fields) + sizeof($custom_fields) + 3;	//unused colspan
+$colspan['dhcp']   = sizeof($selected_ip_fields) + sizeof($custom_fields) - in_array('firewallAddressObject', $selected_ip_fields);		//dhcp colspan
 
 # if no IP is configured only display free subnet!
 if ($addresses===false || sizeof($addresses)==0) {
@@ -186,6 +199,7 @@ if ($addresses===false || sizeof($addresses)==0) {
 # print IP address
 else {
 	$n = 0;		//count for IP addresses - $n++ per IP address
+	$m = sizeof($addresses) -1;		//last address index
 	$g = 0;		//count for compress consecutive class
 
 		foreach($addresses as $dummy) {
@@ -232,7 +246,7 @@ else {
 			    print 		$Addresses->address_type_format_tag($addresses[$n]->state);
 			    print "	</td>";
 				print "	<td>".$Addresses->address_type_index_to_type($addresses[$n]->state)." ("._("range").")</td>";
-        		if(in_array('firewallAddressObject', $selected_ip_fields) && $zone) {
+        		if($zone) {
         			print "	<td class=fw'>".$addresses[$n]->firewallAddressObject."</td>";
         		}
         		print "	<td>".$addresses[$n]->description."</td>";
@@ -375,7 +389,7 @@ else {
 																		{ print "<td class='$resolve[class] hostname'>$resolve[name] $button $dns_records</td>"; }
 
 				# print firewall address object - mandatory if enabled
-				if(in_array('firewallAddressObject', $selected_ip_fields) && $zone) {
+				if($zone) {
 					                                                    { print "<td class='fwzone'>".$addresses[$n]->firewallAddressObject."</td>"; }
 				}
 
@@ -534,7 +548,7 @@ else {
 					print "<a class='ping_ipaddress   btn btn-xs btn-default' data-subnetId='".$addresses[$n]->subnetId."' data-id='".$addresses[$n]->id."' href='#' rel='tooltip' data-container='body' title='"._('Check availability')."'>					<i class='fa fa-gray fa-cogs'></i></a>";
 					print "<a class='search_ipaddress btn btn-xs btn-default         "; if(strlen($resolve['name']) == 0) { print "disabled"; } print "' href='".create_link("tools","search", $resolve['name'])."' "; if(strlen($resolve['name']) != 0)   { print "rel='tooltip' data-container='body' title='"._('Search same hostnames in db')."'"; } print ">	<i class='fa fa-gray fa-search'></i></a>";
 					print "<a class='mail_ipaddress   btn btn-xs btn-default          ' href='#' data-id='".$addresses[$n]->id."' rel='tooltip' data-container='body' title='"._('Send mail notification')."'>																																		<i class='fa fa-gray fa-envelope-o'></i></a>";
-					if(in_array('firewallAddressObject', $selected_ip_fields)) { if($zone) { print "<a class='fw_autogen	   	  btn btn-default btn-xs          ' href='#' data-subnetid='".$addresses[$n]->subnetId."' data-action='adr' data-ipid='".$addresses[$n]->id."' data-dnsname='".$addresses[$n]->hostname."' rel='tooltip' data-container='body' title='"._('Gegenerate or regenerate a firewall addres object of this ip address.')."'><i class='fa fa-gray fa-repeat'></i></a>"; }}
+					if($zone) { print "<a class='fw_autogen	   	  btn btn-default btn-xs          ' href='#' data-subnetid='".$addresses[$n]->subnetId."' data-action='adr' data-ipid='".$addresses[$n]->id."' data-dnsname='".$addresses[$n]->hostname."' rel='tooltip' data-container='body' title='"._('Generate or regenerate a firewall address object of this ip address.')."'><i class='fa fa-gray fa-repeat'></i></a>"; }
 					print "<a class='delete_ipaddress btn btn-xs btn-default modIPaddr' data-action='delete' data-subnetId='".$addresses[$n]->subnetId."' data-id='".$addresses[$n]->id."' href='#' id2='".$Subnets->transform_to_dotted($addresses[$n]->ip_addr)."'>		<i class='fa fa-gray fa-times'>  </i></a>";
 				}
 			}
@@ -589,7 +603,7 @@ else {
         			    $resolve = $DNS->resolve_address($s->ip_addr, $s->hostname, false, $sn->nameserverId);
         																		{ print "<td class='$resolve[class] hostname'>$resolve[name]</td>"; }
         				# print firewall address object - mandatory if enabled
-        				if(in_array('firewallAddressObject', $selected_ip_fields) && $zone) {
+        				if($zone) {
         					                                                    { print "<td class='fwzone'>".$s->firewallAddressObject."</td>"; }
         				}
         				# print description - mandatory
